--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AnsorMed</title>
 
+    <!-- Google fonds -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    
+    <div class="container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora delectus excepturi quam animi. Nemo modi ad eaque illo veritatis eos excepturi consequuntur, repellendus rem hic voluptates, molestias magni totam iure.</div>
 </body>
 </html>
