--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <div class="container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora delectus excepturi quam animi. Nemo modi ad eaque illo veritatis eos excepturi consequuntur, repellendus rem hic voluptates, molestias magni totam iure.</div>
+    
+    <!-- SITE HEADER -->
+    <header class="site-header">
+        <div class="site-header-conteiner conteiner">
+            <a class="site-header-logo" href="#">
+                <img class="site-header-logo-img" src="img/logo-icon.jpg" alt="AnsorMed logo icon" width="50" height="50" srcset="img/logo-icon.jpg 1x, img/logo-icon@2x.jpg 2x">
+                <span class="site-header-logo-text">AnsorMed</span>
+            </a>
+            
+            <!-- SITE-NAV -->
+             <nav class="stenav">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Xizmatlar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Dorilar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Asal</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Blog</a></li>
+                </ul>
+             </nav>
+
+             <a class="main-link" href="#">Qabulga yozilish</a>
+        </div>
+    </header>
+
+
 </body>
 </html>
