--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <!-- Google fonds -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/styles.css">
@@ -18,13 +18,13 @@
     <!-- SITE HEADER -->
     <header class="site-header">
         <div class="site-header-conteiner conteiner">
-            <a class="site-header-logo" href="#">
-                <img class="site-header-logo-img" src="img/logo-icon.jpg" alt="AnsorMed logo icon" width="50" height="50" srcset="img/logo-icon.jpg 1x, img/logo-icon@2x.jpg 2x">
-                <span class="site-header-logo-text">AnsorMed</span>
+            <a class="site-logo" href="#">
+                <img class="site-logo-img" src="img/logo-icon.jpg" alt="AnsorMed logo icon" width="50" height="50" srcset="img/logo-icon.jpg 1x, img/logo-icon@2x.jpg 2x">
+                <span class="site-logo-text">AnsorMed</span>
             </a>
             
             <!-- SITE-NAV -->
-             <nav class="stenav">
+             <nav class="sitenav">
                 <ul class="sitenav-list">
                     <li class="sitenav-item"><a class="sitenav-link" href="#">Xizmatlar</a></li>
                     <li class="sitenav-item"><a class="sitenav-link" href="#">Dorilar</a></li>
