add hero and main link-solid styles

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     
     <!-- SITE HEADER -->
     <header class="site-header">
-        <div class="site-header-conteiner conteiner">
+        <div class="site-header-container container">
             <a class="site-logo" href="#">
-                <img class="site-logo-img" src="img/logo-icon.jpg" alt="AnsorMed logo icon" width="50" height="50" srcset="img/logo-icon.jpg 1x, img/logo-icon@2x.jpg 2x">
+                <img class="site-logo-img" src="img/logo-icon.png" alt="AnsorMed logo icon" width="50" height="50" srcset="img/logo-icon.png 1x, img/logo-icon@2x.png 2x">
                 <span class="site-logo-text">AnsorMed</span>
             </a>
             
@@ -38,6 +38,40 @@
         </div>
     </header>
 
+    <!-- MAIN-CONTENT -->
+    <main>
+        <section class="hero">
+            <div class="hero-container container">
+                <div class="hero-content">
+                    <h2 class="hero-heading">Tabiiy davolash usullari yordamida kasalliklardan xalos bo’ling.</h2>
+                    <p class="hero-text">Hijoma, manual terapiya, zuluk va turli tabiiy giyohlar eng ko’p uchraydigan kasalliklarni yengishda yordam beradi. Sog’ligingizni o’z ishining professionallariga ishonib topshiring.</p>
+                    <a class="main-link main-link-solid" href="#">Qabulga yozilish</a>
+                </div>
 
+                <img class="hero-img" src="img/hero-img.png" alt="Ulug'bek Azamatov doctor" width="423" height="504" srcset="img/hero-img.png 1x, img/hero-img@2x.png 2x">
+            </div>
+        </section>
+    </main>
+
+    <!-- SITE FOOTER -->
+     <footer class="site-footer">
+        <div class="site-footer-container container">
+            <a class="site-logo site-logo-site-footer" href="#">
+                <img class="site-logo-img" src="img/logo-icon.png" alt="AnsorMed logo icon" width="50" height="50" srcset="img/logo-icon.png 1x, img/logo-icon@2x.png 2x">
+                <span class="site-logo-text">AnsorMed</span>
+            </a>
+
+            <!-- SITE-NAV -->
+            <nav class="sitenav sitenav-site-footer">
+                <ul class="sitenav-list">
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Xizmatlar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Dorilar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Asal</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+                    <li class="sitenav-item"><a class="sitenav-link" href="#">Blog</a></li>
+                </ul>
+             </nav>
+        </div>
+     </footer>
 </body>
 </html>
